k8s/base/php-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-lolsauce-service
spec:
  selector:
    app: php-lolsauce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-lolsauce
  labels:
    app: php-lolsauce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-lolsauce
  template:
    metadata:
      name: php-lolsauce
      labels:
        app: php-lolsauce
    spec:
      containers:
        - name: php-lolsauce
          image: lolsauce-php-base:latest # doesn't actually matter
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
